compiler/fir/analysis-tests/testData/resolve/nestedInnerTypeAliases/innerTypeAlias.kt
// LANGUAGE: +NestedTypeAliases

class A<T>

class C<T> {
    <!WRONG_MODIFIER_TARGET!>inner<!> typealias TA = A<T>
}
